// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksTable actions should actionSelected CANCEL cancelleble 1`] = `
Array [
  Array [
    [Function],
  ],
  Array [
    "TASKS_TABLE",
  ],
  Array [
    [Function],
  ],
]
`;

exports[`TasksTable actions should actionSelected CANCEL not cancelleble 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "Not all the selected tasks can be canceled",
          "type": "warning",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`TasksTable actions should actionSelected RESUME not resumable 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "Not all the selected tasks can be resumed",
          "type": "warning",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`TasksTable actions should actionSelected RESUME resumable 1`] = `
Array [
  Array [
    [Function],
  ],
  Array [
    "TASKS_TABLE",
  ],
  Array [
    [Function],
  ],
]
`;

exports[`TasksTable actions should cancelTask 1`] = `
Array [
  Array [
    [Function],
  ],
  Array [
    "TASKS_TABLE",
  ],
  Array [
    [Function],
  ],
]
`;

exports[`TasksTable actions should cancelTaskRequest and fail 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "Trying to cancel \\"some-name\\" task",
          "type": "info",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "\\"some-name\\" Task cannot be cancelled at the moment.",
          "type": "error",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`TasksTable actions should cancelTaskRequest and succeed 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "Trying to cancel \\"some-name\\" task",
          "type": "info",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "\\"some-name\\" Task cancelled",
          "type": "success",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`TasksTable actions should resumeTask 1`] = `
Array [
  Array [
    [Function],
  ],
  Array [
    "TASKS_TABLE",
  ],
  Array [
    [Function],
    undefined,
  ],
]
`;

exports[`TasksTable actions should resumeTaskRequest and fail 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "Task \\"some-name\\" has to be resumable.",
          "type": "error",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`TasksTable actions should resumeTaskRequest and succeed 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "\\"some-name\\" Task execution was resumed",
          "type": "success",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;
